--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "react-scripts": "0.2.3"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react-dom": "^15.3.1",
+    "react-fontawesome": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
