--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.14.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-fontawesome": "^1.1.0"
+    "react-fontawesome": "^1.1.0",
+    "react-router": "^2.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
