--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "pasdesujin",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": "6.3.1",
+    "npm": "3.10.5"
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.0.2",
@@ -59,6 +63,7 @@
     "react-router": "^2.7.0"
   },
   "scripts": {
+    "postinstall": "npm run build",
     "start": "node ./scripts/start.js",
     "build": "node ./scripts/build.js",
     "test": "mocha test"
