--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "npm": "3.10.5"
   },
   "dependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^3.0.2",
     "autoprefixer": "6.4.0",
     "babel-core": "6.14.0",
     "babel-eslint": "6.1.2",
@@ -21,7 +19,9 @@
     "babel-preset-latest": "6.14.0",
     "babel-preset-react": "6.11.1",
     "babel-runtime": "6.11.6",
+    "bootstrap": "^3.3.7",
     "case-sensitive-paths-webpack-plugin": "1.1.3",
+    "chai": "^3.5.0",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.0",
@@ -33,6 +33,8 @@
     "eslint-plugin-import": "1.12.0",
     "eslint-plugin-jsx-a11y": "2.0.1",
     "eslint-plugin-react": "5.2.2",
+    "express": "^4.14.0",
+    "express-stormpath": "^3.1.5",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
@@ -41,10 +43,16 @@
     "html-webpack-plugin": "2.22.0",
     "http-proxy-middleware": "0.17.0",
     "json-loader": "0.5.4",
+    "mocha": "^3.0.2",
     "object-assign": "4.1.0",
     "opn": "4.0.2",
     "postcss-loader": "0.9.1",
     "promise": "7.1.1",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-fontawesome": "^1.1.0",
+    "react-router": "^2.7.0",
+    "react-stormpath": "^1.3.1",
     "recursive-readdir": "2.0.0",
     "rimraf": "2.5.4",
     "strip-ansi": "3.0.1",
@@ -52,13 +60,7 @@
     "url-loader": "0.5.7",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1",
-    "whatwg-fetch": "1.0.0",
-    "bootstrap": "^3.3.7",
-    "express": "^4.14.0",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-fontawesome": "^1.1.0",
-    "react-router": "^2.7.0"
+    "whatwg-fetch": "1.0.0"
   },
   "scripts": {
     "postinstall": "npm run build",
